--- a/vignettes/statgenSTA.Rmd
+++ b/vignettes/statgenSTA.Rmd
@@ -168,12 +168,12 @@ Boxplots can be made to get an idea of the contents of the data in the `TD` obje
 plot(wheatTD, plotType = "box", traits = "GY")
 ```
 
-The trials in the boxplot can be grouped using the parameter `groupBy`. Colors can be applied to groups within trials using the parameter `colorBy`. The boxes  for the (groups of) trials can be ordered using `orderBy`. Boxes can be ordered by an external vector or by the group mean.
+The trials in the boxplot can be grouped using the parameter `groupBy`. Colors can be applied to groups within trials using the parameter `colorTrialBy`. The boxes  for the (groups of) trials can be ordered using `orderBy`. Boxes can be ordered by an external vector or by the group mean.
 ```{r boxPlotGR}
 ## Create a boxplot for grain yield with boxes grouped by year and repIds within
 ## years colored.
 plot(wheatTD, plotType = "box", traits = "GY", groupBy = "year", 
-     colorBy = "repId", orderBy = "descending")
+     colorTrialBy = "repId", orderBy = "descending")
 ```
 
 ### Correlation plot {#corPlot}
@@ -186,7 +186,7 @@ plot(wheatTD, plotType = "cor", traits = "GY")
 
 ### Scatter plot matrix {#scatPlot}
 
-Finally a scatter plot matrix can be made. The lower left of the matrix contains scatter plots between trials. The diagonal contains histograms of the data per trial. It is possible to calculate the correlation between environments and print it in the scatter plots by specifying `addCorr`. `addCorr` takes the values "tl" (top left), "tr" (top right), "bl" (bottom left) or "br" (bottom right). This indicates where the correlation is placed in each of the scatter plots. It is possible to color the genotypes in the plots by a variable in the TD object by specifying `colorBy`.
+Finally a scatter plot matrix can be made. The lower left of the matrix contains scatter plots between trials. The diagonal contains histograms of the data per trial. It is possible to calculate the correlation between environments and print it in the scatter plots by specifying `addCorr`. `addCorr` takes the values "tl" (top left), "tr" (top right), "bl" (bottom left) or "br" (bottom right). This indicates where the correlation is placed in each of the scatter plots. It is possible to color the genotypes in the plots by a variable in the TD object by specifying `colorGenoBy`.
 
 ```{r scatPlot, fig.dim = c(7, 7)}
 ## Create a scatter plot matrix for grain yield.
