--- a/inst/reports/modelReport.Rnw
+++ b/inst/reports/modelReport.Rnw
@@ -187,8 +187,8 @@ if (engine == "SpATS") {
 }
 ## Print variance components
 vcWhat <- paste0("varComp", ifelse(modelType == "fixed", "F", "R"))
-varComp <- extract(x, trials = trial,
-                     what = vcWhat)[[trial]][[vcWhat]][[trait]]
+varComp <- extractSTA(x, trials = trial,
+                      what = vcWhat)[[trial]][[vcWhat]][[trait]]
 print(xtable::xtable(x = varComp, label = "varComps",
                      caption =  "Variance components",
                      align = c("l", rep(x = "r", times = ncol(varComp)))),
@@ -197,8 +197,7 @@ print(xtable::xtable(x = varComp, label = "varComps",
 ## Print generalized heritability
 if (modelType == "random") {
   cat(paste("The generalized heritability is",
-            round(extract(x, trials = trial,
-                            what = "heritability")[[trial]][["heritability"]][trait],
+            round(extractSTA(x, trials = trial, what = "heritability")[[trial]][["heritability"]][trait],
                   digits = 2)))
 }
 @
@@ -224,8 +223,8 @@ plot(x, trials = trial, traits = trait, what = modelType, plotType = "base")
 \Sexpr{paste(ifelse(descending, "highest", "lowest"), predName)}}
 %-------------------------------------------------------------------------------
 <<label=best10perc, echo=FALSE, results="hide">>=
-pred <- extract(x, what = predName)[[trial]][[predName]][c("genotype", trait)]
-predSE <- extract(x, what = paste0("se", predName))[[trial]][[1]][c("genotype", trait)]
+pred <- extractSTA(x, what = predName)[[trial]][[predName]][c("genotype", trait)]
+predSE <- extractSTA(x, what = paste0("se", predName))[[trial]][[1]][c("genotype", trait)]
 predTot <- merge(x = pred, y = predSE, by = "genotype")
 predTot <- predTot[order(predTot[[paste0(trait,".x")]],
                          decreasing = descending), ]
