--- a/vignettes/statgenSTA.Rmd
+++ b/vignettes/statgenSTA.Rmd
@@ -345,9 +345,9 @@ Reporting for an `STA` object can be done for multiple trials, traits and modelt
 
 # Extracting model results
 
-After fitting a model, various results can be extracted or calculated from the fitted model using the function `extract`. This can be anything from a single result for one trait and one trial to a `list` of different results for all models in an `STA` object. The results that can be extracted depend on the type of model fitted and sometimes on the modeling engine as well. For example, BLUEs can only extracted if genotype was fitted as fixed effect. On the other hand, BLUPs and heritabilities can only be calculated and extracted if genotype was fitted as random effect.  
+After fitting a model, various results can be extracted or calculated from the fitted model using the function `extractSTA`. This can be anything from a single result for one trait and one trial to a `list` of different results for all models in an `STA` object. The results that can be extracted depend on the type of model fitted and sometimes on the modeling engine as well. For example, BLUEs can only extracted if genotype was fitted as fixed effect. On the other hand, BLUPs and heritabilities can only be calculated and extracted if genotype was fitted as random effect.  
 
-All results that can be extracted are shown in the table below. In the first column is the result. This is also the value to be used for the parameter `what` in `extract` needed to extract the corresponding result. The second column shows what model needs to be fitted in order to be able to extract the result. Here F stands for genotype as fixed effect and R for genotype as random effect.  The last column gives a short description of the result that will be extracted and, where needed, also states for which modeling engines it can be extracted.
+All results that can be extracted are shown in the table below. In the first column is the result. This is also the value to be used for the parameter `what` in `extractSTA` needed to extract the corresponding result. The second column shows what model needs to be fitted in order to be able to extract the result. Here F stands for genotype as fixed effect and R for genotype as random effect.  The last column gives a short description of the result that will be extracted and, where needed, also states for which modeling engines it can be extracted.
 
 ```{r extractOpts, results="as.is", echo=FALSE, out.width = "\\textwidth"}
 ## Generate table of options for extract from internal data.
@@ -361,25 +361,25 @@ Using `what = "all"` in the function call, extracts all results possible for the
 Below are some examples of extracting results from a fitted model. Recall that `modWheatSp` contains two fitted models, one with genotype as fixed effect and one with genotype as random effect.
 ```{r extBLUEs}
 ## Extract BLUEs
-BLUEsWheat <- extract(STA = modWheatSp, what = "BLUEs")
+BLUEsWheat <- extractSTA(STA = modWheatSp, what = "BLUEs")
 ## Extract BLUEs and BLUPs
-predWheat <- extract(STA = modWheatSp, what = c("BLUEs", "BLUPs"))
+predWheat <- extractSTA(STA = modWheatSp, what = c("BLUEs", "BLUPs"))
 ```
 Both `BLUEsWheat` and `predWheat` are `list`s with one item, the trial used for modeling. In general, when extracting results, there will be an item in the `list` for every trial for which results were extracted. These items are a `list` themselves with an item for every statistic that has been extracted, so one item for `BLUEsWheat`, a `data.frame` containing the BLUEs, and two for `predWheat`, the `data.frames` containing BLUEs and BLUPs respectively. 
 
 ## Adding extra variables
 
-The `data.frame` BLUEs in either of the `lists` consists of only two columns, genotype and GY. If the model would have been fitted for multiple traits all these traits would become columns in the `data.frame`. It might be useful to add extra columns from the data used to fit the model to the output. This can be achieved using the paramater `keep` in `extract`. To include the trial in the output, useful for easily combining several `data.frames` with BLUEs and using them for a GxE analysis, use the following command
+The `data.frame` BLUEs in either of the `lists` consists of only two columns, genotype and GY. If the model would have been fitted for multiple traits all these traits would become columns in the `data.frame`. It might be useful to add extra columns from the data used to fit the model to the output. This can be achieved using the paramater `keep` in `extractSTA`. To include the trial in the output, useful for easily combining several `data.frames` with BLUEs and using them for a GxE analysis, use the following command
 ```{r extBLUEsKeep}
 ## Extract BLUEs from the fitted model.
-BLUEsWheat2 <- extract(STA = modWheatSp, what = "BLUEs", keep = "trial")
+BLUEsWheat2 <- extractSTA(STA = modWheatSp, what = "BLUEs", keep = "trial")
 head(BLUEsWheat2[["SR_FI_11"]]$BLUEs)
 ```
 Not every column from the original `TD` object can be included in the extracted data in this way. Only columns that, for each genotype, have only one value per trial can be included. For example, the column `repId` containing replicates, that has several different values for a single genotype within each trial, cannot be included. When trying to do so it will be ignored with a warning.  
 It is however possible to include `repId` when extracting fitted values, since for each observation in the original data a fitted value is computed. 
 ```{r extFit}
 ## Extract fitted values from the model.
-fitVals <- extract(STA = modWheatSp, what = "fitted", keep = c("trial", "repId"))
+fitVals <- extractSTA(STA = modWheatSp, what = "fitted", keep = c("trial", "repId"))
 head(fitVals[["SR_FI_11"]]$fitted)
 ```
 
