--- a/vignettes/statgenSTA.Rmd
+++ b/vignettes/statgenSTA.Rmd
@@ -488,6 +488,8 @@ optsTab <- optsTab[order(optsTab[["model"]]), ]
 knitr::kable(optsTab, align = "l", row.names = FALSE)
 ```
 
+*Note that when predictions are made (e.g. when extracting BLUEs, BLUPs or their standard errors), those predictions are always obtained by averaging over all levels of the fixed factors in the model.*
+
 Using `what = "all"` in the function call, extracts all results possible for the fitted model. This is also the default.  
 
 Below are some examples of extracting results from a fitted model. Recall that `modDropsSp` contains two fitted models, one with genotype as fixed effect and one with genotype as random effect.
@@ -499,7 +501,7 @@ BLUEsDrops <- extractSTA(STA = modDropsSp,
 predDrops <- extractSTA(STA = modDropsSp, 
                         what = c("BLUEs", "BLUPs"))
 ```
-Note that `BLUEsDrops` is a data.frame, whereas `predDrops` is a list with one item, since we fitted a model for only one trial. 
+*Note that `BLUEsDrops` is a data.frame, whereas `predDrops` is a list with one item, since we fitted a model for only one trial.*
 
 ## Adding extra variables
 
