--- a/README.Rmd
+++ b/README.Rmd
@@ -22,7 +22,7 @@ knitr::opts_chunk$set(
 
 **statgenSTA** is an R package providing functions for phenotypic analysis of agricultural field trials using mixed models with and without spatial components.
 
-Analysis can be done using one of the R packages **SpATS**, **lme4** or **asreml**. For the latter a license is required which can be obtained upon purchase from [VSNi](<http://www.vsni.co.uk/software/asreml-r>).
+Analysis can be done using one of the R packages **SpATS**, **lme4** or **asreml**. For the latter a license is required which can be obtained upon purchase from [VSNi](<https://www.vsni.co.uk/software/asreml-r>).
 
 statgenSTA has extensive options for summarizing and visualizing both the raw data and the fitted models. The example below shows a selection of what is possible. For a full overview of all options it is best to read the [**vignette**](https://biometris.github.io/statgenSTA/articles/statgenSTA.html)
 
@@ -47,42 +47,77 @@ Example using the phenotypic data for a wheat trial in Chile. The same data is u
 First get the data in the form required by the package, converting it to an object of class **T(rial)D(ata)**.
 ```{r createTD}
 library(statgenSTA)
-data("wheatChl")
-wheatTD <- createTD(data = wheatChl, genotype = "trt", repId = "rep",
-            subBlock = "bl", rowCoord = "row", colCoord = "col")
+data(dropsRaw)
+dropsTD <- createTD(data = dropsRaw,
+                    genotype = "Variety_ID", 
+                    trial = "Experiment",
+                    loc = "Site",
+                    repId = "Replicate", 
+                    subBlock = "block",
+                    rowCoord = "Row", 
+                    colCoord = "Column", 
+                    trLat = "Lat", 
+                    trLong = "Long")
 ```
 
 Some plots to get a first idea of the contents of the data.
 ```{r layoutPlot}
-## Plot the layout for SR_FI_11 with genotypes G278 and G279 highlighted.
-plot(wheatTD, plotType = "layout", trials = "SR_FI_11", highlight = c("G278", "G279"))
+## Plot the layout for Gai12W.
+## Highlight genotypes A3 and 11430 in red and blue.
+plot(dropsTD, 
+     trials = "Gai12W", 
+     highlight = c("A3", "11430"),
+     colHighlight = c("red", "blue"))
 ```
+
+```{r mapPlot}
+## Plot the locations of the trials on a map.
+## Color the trials by water scenario.
+plot(dropsTD, 
+     plotType = "map",
+     colorTrialBy = "scenarioWater",
+     colTrial = c("red", "darkgreen"))
+```
+
 
 ```{r boxPlot}
 ## Create a boxplot for grain yield.
-plot(wheatTD, plotType = "box", traits = "GY")
+plot(dropsTD, 
+     plotType = "box", 
+     traits = "grain.yield")
 ```
 
 ```{r scatterPlot}
 ## Create a scatter plot matrix for grain yield.
-## Add correlations between trials in top left of scatter plots.
-plot(wheatTD, plotType = "scatter", traits = "GY", addCorr = "tl")
+## Color trials by scenario and genotypes by family.
+plot(dropsTD, 
+     plotType = "scatter", 
+     traits = "grain.yield", 
+     colorTrialBy = "scenarioFull", 
+     colorGenoBy = "geneticGroup")
 ```
 
-Fit mixed models for one of the trials, SR_FI_11, and visualize the output.
+Fit mixed models for one of the trials, Gai12W, and visualize the output.
 ```{r fitMod}
-## Fit a single trial model using a model based on a resovable row column design.
-modWheatSp <- fitTD(TD = wheatTD, trials = "SR_FI_11", traits = "GY", design = "res.rowcol")
+## Fit a single trial model using a model based on a resolvable row column design.
+modDropsSp <- fitTD(TD = dropsTD, 
+                    trials = "Gai12W", 
+                    traits = "grain.yield",
+                    design = "res.rowcol")
 ```
 
 ```{r basePlot}
-## Base plots for the model with genotype fitted as random effect.
-plot(modWheatSp, plotType = "base", what = "random")
+## Spatial plot for the model with genotype fitted as fixed effect.
+plot(modDropsSp, 
+     plotType = "spatial")
 ```
 
 ```{r spatialPlot}
 ## Spatial plot for the model with genotype fitted as fixed effect.
 ## Display the spatial trend as a percentage.
-plot(modWheatSp, plotType = "spatial", spaTrend = "percentage")
+plot(modDropsSp, 
+     plotType = "spatial", 
+     spaTrend = "percentage")
+
 ```
 
